Qickfixes for add/remove typeTags for fields and methods